--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Blogpost</title>
 </head>
+
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
             <span id="tagline">Bienvenido a Hyperblog 2.0</span>
         </div>
@@ -17,9 +20,8 @@
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas.</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-            <p>Agregé un nuevo párrafo</p>
             <p>Suscribete y dale like</p>
         </div>
-    </div> 
+    </div>
 </body>
 </html>
