Modificando el titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Blogpost</title>
+    <title>Hyperblog</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline">Bienvenido a Hyperblog 2.0</span>
+            <span id="tagline">Tu Blog de Cabecera</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
