--- a/blogpost.html
+++ b/blogpost.html
@@ -14,11 +14,12 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline">Bienvenido a Hyperblog 2.0</span>
+            <span id="tagline">Hyperblog 2.0 un Blog del futuro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas.</p>
+            <p><img src="imagenes/teams.jpg" width="100%"/></p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
